# lambdit

./: .gitignore  lambdit.cabal
src/: Lambdit.hs
src/Lambdit/: Requests.hs  Types.hs
test/: LambditTest.hs
