name:                lambdit
version:             0.1.0.0
synopsis:            A Haskell Reddit client
-- description:         
homepage:            https://github.com/ejconlon/lambdit
license:             GPL-2
license-file:        LICENSE
author:              Eric Conlon
maintainer:          ejconlon@gmail.com
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.8

Library
  hs-source-dirs: src

  Build-depends:
    base                      >= 4     && < 5,
    bytestring                >= 0.9.1 && < 0.10,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2     && < 3,
    snap-core                 >= 0.9.2 && < 0.10,
    snap-server               >= 0.9.2 && < 0.10,
    aeson

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2

Test-suite test
  hs-source-dirs: test, src
  main-is: LambditTest.hs
  Type: exitcode-stdio-1.0

  Build-Depends:
    base                      >= 4     && < 5,
    test-framework,
    test-framework-hunit,
    test-framework-quickcheck2,
    HUnit,
    QuickCheck
